--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Projects</a></li>
-							<li><a href="generic.html">Blog</a></li>
+							<li><a href="blog.html">Blog</a></li>
 						</ul>
 					</nav>
 
@@ -51,7 +50,7 @@
 							<header>
 								<h1>Thank you for stopping by to check out my web development work and here is the link for my <br />
  <a href="https://github.com/YenniLee">GitHub</a>.</h1>
-								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
+								<p>I am a web development student at Lambda School who is learning each day how to turn my ideas into responsive web pages. </p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -69,10 +68,10 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Lorem</h2>
+									<a href="https://github.com/YenniLee/github-usercard">
+										<h2>GitHub UserCard</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>I am using the GitHub API to display information from some of my followers.</p>
 										</div>
 									</a>
 								</article>
@@ -80,10 +79,10 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Feugiat</h2>
+									<a href="https://github.com/YenniLee/Sprint-Challenge--Advanced-CSS">
+										<h2>SpaceWalkers WebPage</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Using provided design files, I added CSS styling to produce this webpage.</p>
 										</div>
 									</a>
 								</article>
@@ -91,10 +90,10 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Tempus</h2>
+									<a href="https://github.com/YenniLee/nasa-photo-of-the-day">
+										<h2>Nasa Photo of the Day</h2>
 										<div class="content">
-											<p></p>
+											<p>Using NASA API, I created a web app with React to display the current day's astronomy photo.</p>
 										</div>
 									</a>
 								</article>
