added content to blog

--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Jennie Van</span>
 								</a>
 
 							<!-- Nav -->
@@ -48,10 +48,13 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Lambda Student Web23 Blog</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>HTML</p>
-							<p>CSS</p>
-							<p>JavaScript</p>
+							<span class="image main"><img src="images/computer.jpg" alt="" /></span>
+							<h3>HTML</h3>
+							<p>I genuinely enjoy working with HTML and learning how to use semantic HTML and create code that is easy to read and understand.</p>
+							<h3>CSS</h3>
+							<p>Within the first month, I learned how to use Vanilla CSS, LESS, flexbox, and bootstrap to create responsive web pages.</p>
+							<h3>JavaScript</h3>
+							<p>I am currently learning React after going through our JavaScript fundamentals module.</p>
 						</div>
 					</div>
 
